--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 * {
   margin: 0;
   padding: 0;
@@ -29,7 +31,7 @@ header h1 {
 
 /* Estilos Login */
 
-@import url(https://fonts.googleapis.com/css?family=Open+Sans);
+
 .btn {
   display: inline-block;
   *display: inline;
@@ -397,3 +399,27 @@ select {
 	box-shadow: inset 0 -5px 45px rgba(100, 100, 100, 0.4),
 	  0 1px 1px rgba(255, 255, 255, 0.2);
   }
+
+/*  Estilos rutina */
+
+.rutina {
+	margin-top: 50px;
+  width: 500px;
+  text-align: center;
+}
+.rutina h1 {
+  color: #fff;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+  letter-spacing: 1px;
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.rutina p{
+  color: #fff;
+}
+
+.rutina h3{
+  color: #fff;
+  margin-top: 15px;
+}
