--- a/style.css
+++ b/style.css
@@ -436,6 +436,11 @@ select {
   margin-top: 25px;
 }
 
+.botones-rutina{
+  margin-top: 30px;
+  margin-bottom: 15px;
+}
+
 #contenedorTabla{
   width: 100%;
 }
@@ -466,4 +471,8 @@ padding: 5px;
 
 #contenedorTabla{
   margin-top: 10px;
+}
+
+.ultimaColumna{
+  width: 200px;
 }
