--- a/style.css
+++ b/style.css
@@ -287,11 +287,6 @@ input:focus {
   z-index: 1;
 }
 
-@media (max-width: 768px) {
-  .navegador h3 {
-    display: none;
-  }
-}
 .navegador ul {
   padding: 0px;
   margin: 0px;
@@ -300,65 +295,20 @@ input:focus {
   gap: 20px;
   margin-right: 7.5%;
 }
-@media (max-width: 768px) {
-  .navegador ul {
-    left: 1000px;
-    padding: 0px;
-    margin: 0px;
-    position: fixed;
-    top: 0px;
-    width: 200px;
-    background: linear-gradient(
-      45deg,
-      rgb(153, 151, 182) 0%,
-      rgb(75, 75, 135) 23%,
-      rgb(0, 6, 8) 100%
-    );
-    padding: 20px;
-  }
-  .navegador ul:hover {
-    left: 0;
-    flex-direction: column;
-    z-index: 1;
-  }
-}
+
 .navegador ul li {
   list-style: none;
 }
 .navegador ul li a {
   text-decoration: none;
 }
-@media (max-width: 768px) {
-  .navegador ul li a {
-    color: white;
-  }
-}
+
 .navegador ul li h3 {
   display: none;
 }
-@media (max-width: 768px) {
-  .navegador ul li h3 {
-    display: block;
-    color: white;
-    text-shadow: 2px 2px 1px black;
-    margin: 0;
-  }
-}
+
 .navegador .fa-bars {
   display: none;
-}
-@media (max-width: 768px) {
-  .navegador .fa-bars {
-    display: block;
-    font-size: 30px;
-    color: white;
-    margin: 10px;
-    margin-left: 7.5%;
-    order: -1;
-  }
-  .navegador .fa-bars:hover + ul {
-    left: 0;
-  }
 }
 
 #cerrarSesion{
@@ -434,6 +384,21 @@ select {
 .rutina h3{
   color: #fff;
   margin-top: 25px;
+}
+
+.rutina ul li {
+  list-style: none;
+  color: white;
+  font-size: 25px;
+  margin: 10px;
+}
+
+.rutina ul{
+  margin-bottom: 100px;
+}
+
+#tituloAerobico{
+  font-size: 40px;
 }
 
 .botones-rutina{
